cafe admin discounts edit tab added

--- a/bookletStart.html
+++ b/bookletStart.html
@@ -125,7 +125,11 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="dropdown">
-                        <button href="#pablo" class="dropdown-toggle btn btn-primary btn-block yekanFont normalFontSize2" data-toggle="dropdown" aria-expanded="false">مهندسی کامپیوتر <b class="caret"></b><div class="ripple-container"></div></button>
+                        <button href="#pablo"
+                                class="dropdown-toggle btn btn-primary btn-block yekanFont normalFontSize2"
+                                data-toggle="dropdown" aria-expanded="false">مهندسی کامپیوتر <b class="caret"></b>
+                            <div class="ripple-container"></div>
+                        </button>
                         <ul class="dropdown-menu dropdown-menu-right yekanFont normalFontSize2 text-right w-100">
                             <li class="dropdown-header">مهندسی کامپیوتر</li>
                             <li><a href="#pablo">ساختمان داده</a></li>
@@ -138,7 +142,11 @@
                 </div>
                 <div class="col-md-3">
                     <div class="dropdown">
-                        <button href="#pablo" class="dropdown-toggle btn btn-primary btn-block yekanFont normalFontSize2" data-toggle="dropdown" aria-expanded="false">مهندسی کامپیوتر <b class="caret"></b><div class="ripple-container"></div></button>
+                        <button href="#pablo"
+                                class="dropdown-toggle btn btn-primary btn-block yekanFont normalFontSize2"
+                                data-toggle="dropdown" aria-expanded="false">مهندسی کامپیوتر <b class="caret"></b>
+                            <div class="ripple-container"></div>
+                        </button>
                         <ul class="dropdown-menu dropdown-menu-right yekanFont normalFontSize2 text-right w-100">
                             <li class="dropdown-header">مهندسی کامپیوتر</li>
                             <li><a href="#pablo">ساختمان داده</a></li>
@@ -151,7 +159,11 @@
                 </div>
                 <div class="col-md-3">
                     <div class="dropdown">
-                        <button href="#pablo" class="dropdown-toggle btn btn-primary btn-block yekanFont normalFontSize2" data-toggle="dropdown" aria-expanded="false">مهندسی کامپیوتر <b class="caret"></b><div class="ripple-container"></div></button>
+                        <button href="#pablo"
+                                class="dropdown-toggle btn btn-primary btn-block yekanFont normalFontSize2"
+                                data-toggle="dropdown" aria-expanded="false">مهندسی کامپیوتر <b class="caret"></b>
+                            <div class="ripple-container"></div>
+                        </button>
                         <ul class="dropdown-menu dropdown-menu-right yekanFont normalFontSize2 text-right w-100">
                             <li class="dropdown-header">مهندسی کامپیوتر</li>
                             <li><a href="#pablo">ساختمان داده</a></li>
@@ -164,7 +176,11 @@
                 </div>
                 <div class="col-md-3">
                     <div class="dropdown">
-                        <button href="#pablo" class="dropdown-toggle btn btn-primary btn-block yekanFont normalFontSize2" data-toggle="dropdown" aria-expanded="false">مهندسی کامپیوتر <b class="caret"></b><div class="ripple-container"></div></button>
+                        <button href="#pablo"
+                                class="dropdown-toggle btn btn-primary btn-block yekanFont normalFontSize2"
+                                data-toggle="dropdown" aria-expanded="false">مهندسی کامپیوتر <b class="caret"></b>
+                            <div class="ripple-container"></div>
+                        </button>
                         <ul class="dropdown-menu dropdown-menu-right yekanFont normalFontSize2 text-right w-100">
                             <li class="dropdown-header">مهندسی کامپیوتر</li>
                             <li><a href="#pablo">ساختمان داده</a></li>
@@ -177,7 +193,11 @@
                 </div>
                 <div class="col-md-3">
                     <div class="dropdown">
-                        <button href="#pablo" class="dropdown-toggle btn btn-primary btn-block yekanFont normalFontSize2" data-toggle="dropdown" aria-expanded="false">مهندسی کامپیوتر <b class="caret"></b><div class="ripple-container"></div></button>
+                        <button href="#pablo"
+                                class="dropdown-toggle btn btn-primary btn-block yekanFont normalFontSize2"
+                                data-toggle="dropdown" aria-expanded="false">مهندسی کامپیوتر <b class="caret"></b>
+                            <div class="ripple-container"></div>
+                        </button>
                         <ul class="dropdown-menu dropdown-menu-right yekanFont normalFontSize2 text-right w-100">
                             <li class="dropdown-header">مهندسی کامپیوتر</li>
                             <li><a href="#pablo">ساختمان داده</a></li>
@@ -190,7 +210,11 @@
                 </div>
                 <div class="col-md-3">
                     <div class="dropdown">
-                        <button href="#pablo" class="dropdown-toggle btn btn-primary btn-block yekanFont normalFontSize2" data-toggle="dropdown" aria-expanded="false">مهندسی کامپیوتر <b class="caret"></b><div class="ripple-container"></div></button>
+                        <button href="#pablo"
+                                class="dropdown-toggle btn btn-primary btn-block yekanFont normalFontSize2"
+                                data-toggle="dropdown" aria-expanded="false">مهندسی کامپیوتر <b class="caret"></b>
+                            <div class="ripple-container"></div>
+                        </button>
                         <ul class="dropdown-menu dropdown-menu-right yekanFont normalFontSize2 text-right w-100">
                             <li class="dropdown-header">مهندسی کامپیوتر</li>
                             <li><a href="#pablo">ساختمان داده</a></li>
