--- a/cafeAdmin.html
+++ b/cafeAdmin.html
@@ -81,7 +81,8 @@
     </div>
 </nav>
 
-<div class="page-header header-small" data-parallax="false" style="background-size: cover;background-image: url(assets/img/cafe.jpg);">
+<div class="page-header header-small" data-parallax="false"
+     style="background-size: cover;background-image: url(assets/img/cafe.jpg);">
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
@@ -148,7 +149,14 @@
                         <!---->
                         <div class="tab-pane active" id="cafeDiscounts">
                             <div class="row">
-                                <h2 class="text-right yekanFont">تخفیفات کافه شما</h2>
+                                <div class="col-md-12">
+                                    <div class="pull-right">
+                                        <h2 class="text-right yekanFont">تخفیفات کافه شما</h2>
+                                    </div>
+                                    <div class="pull-left" style="margin-top:20px !important;">
+                                        <a href="#" class="btn btn-success yekanFont">آرشیو تخفیفات</a>
+                                    </div>
+                                </div>
                                 <hr>
                                 <div class="input-group">
 		                        <span class="input-group-addon">
@@ -321,22 +329,18 @@
                             </div>
                             <hr>
                             <div class="row">
-                                <h5 class="yekanFont text-right">اضافه کردن تخفیف جدید:</h5>
-                                <form action="" method="">
+                                <div class="col-md-6"></div>
+                                <div class="col-md-6" style="margin:0 auto !important;float:none !important;">
+                                    <h5 class="yekanFont text-right">اضافه کردن تخفیف جدید:</h5>
                                     <div class="card card-form-horizontal"
                                          style="box-shadow:0 0px 5px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12)">
                                         <div class="card-content">
                                             <form method="" action="">
                                                 <div class="row">
-
-
                                                     <div class="col-sm-4">
-                                                        <button type="button"
-                                                                class="btn btn-info btn-block yekanFont">اضافه کردن
-                                                            تخفیف
-                                                        </button>
+                                                        <input type="submit" value="اضافه کردن تخفیف"
+                                                               class="btn btn-info btn-block yekanFont">
                                                     </div>
-
                                                     <div class="col-sm-8">
                                                         <div class="input-group">
 	        											<span class="input-group-addon">
@@ -354,45 +358,50 @@
                                             </form>
                                         </div>
                                     </div>
-                                </form>
+
+                                </div>
                             </div>
-                            <hr>
                             <div class="row">
-                                <h5 class="yekanFont text-right">
-                                    لیست تخفیفات موجود :
-                                </h5>
-                                <div class="card"
-                                     style="box-shadow:0 0px 5px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12)">
-                                    <div class="table-responsive">
-                                        <table class="table table-striped yekanFont">
-                                            <thead>
-                                            <tr>
-                                                <th class="text-center">#</th>
-                                                <!--<th class="tex  t-right">اسم کافه</th>-->
-                                                <th class="text-center">میزان تخفیف</th>
-                                                <th class="text-right">عملیات</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody id="myTable">
+                                <div class="col-md-6"></div>
+                                <div class="col-md-6" style="margin:0 auto !important;float:none !important;">
+                                    <h5 class="yekanFont text-right">
+                                        لیست تخفیفات موجود :
+                                    </h5>
+                                    <div class="card"
+                                         style="box-shadow:0 0px 5px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12)">
+                                        <div class="table-responsive">
+                                            <table class="table table-striped yekanFont">
+                                                <thead>
                                                 <tr>
-                                                <td class="text-center">1</td>
-                                                <!--<td>کافه اسنیدز</td>-->
-                                                <td>20 درصد</td>
-                                                <td class="td-actions text-right">
-                                                    <a href="#" type="button" rel="tooltip" class="btn btn-danger yekanFont" data-original-title="" title="">
-                                                        <i class="material-icons">clear</i>
-                                                        حذف تخفیف
-                                                        <div class="ripple-container"></div>
-                                                    </a>
-                                                </td>
-                                            </tr>
+                                                    <th class="text-center">#</th>
+                                                    <!--<th class="tex  t-right">اسم کافه</th>-->
+                                                    <th class="text-center">میزان تخفیف</th>
+                                                    <th class="text-center">عملیات</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody id="myTable">
+                                                <tr>
+                                                    <td class="text-center">1</td>
+                                                    <!--<td>کافه اسنیدز</td>-->
+                                                    <td>20 درصد</td>
+                                                    <td class="td-actions text-center">
+                                                        <a href="#" type="button" rel="tooltip"
+                                                           class="btn btn-danger yekanFont" data-original-title=""
+                                                           title="">
+                                                            <i class="material-icons">clear</i>
+                                                            حذف تخفیف
+                                                            <div class="ripple-container"></div>
+                                                        </a>
+                                                    </td>
+                                                </tr>
 
                                                 <tr>
                                                     <td class="text-center">2</td>
                                                     <!--<td>کافه اسنیدز</td>-->
                                                     <td>15 درصد</td>
-                                                    <td class="td-actions text-right">
-                                                        <a href="#" type="button" rel="tooltip" class="btn btn-danger yekanFont"
+                                                    <td class="td-actions text-center">
+                                                        <a href="#" type="button" rel="tooltip"
+                                                           class="btn btn-danger yekanFont"
                                                            data-original-title="" title="">
                                                             <i class="material-icons">clear</i>
                                                             حذف تخفیف
@@ -401,16 +410,17 @@
                                                     </td>
                                                 </tr>
 
-                                            </tbody>
-                                        </table>
+                                                </tbody>
+                                            </table>
+                                        </div>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <hr>
         </div>
     </div><!-- section -->
 </div>
